--- a/Page-1.css
+++ b/Page-1.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 673px;
+  min-height: 449px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,30 +11,26 @@
   animation-duration: 1000ms;
   text-shadow: 2px 2px 8px rgba(128,128,128,1);
   font-size: 2.25rem;
-  width: 796px;
-  margin: 155px auto 0;
+  margin: 150px auto 0;
 }
 
 .u-section-1 .u-form-1 {
   height: 77px;
   width: 957px;
-  margin: 34px auto 60px;
+  margin: 61px auto 60px;
 }
 
 .u-section-1 .u-input-1 {
   background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-1 .u-input-2 {
   background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   border-style: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   padding: 9px 30px;
 }
 
@@ -43,15 +39,19 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 483px;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-left: 344px;
     transition-duration: 0.5s;
     transform: rotate(0deg) scale(1.39);
+    margin-top: 204px;
   }
 
   .u-section-1 .u-form-1 {
-    margin-top: 152px;
     width: 940px;
+    margin-top: 31px;
   }
 
   .u-section-1 .u-icon-1 {
@@ -60,22 +60,12 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    margin-left: 263px;
-    width: 720px;
-  }
-
   .u-section-1 .u-form-1 {
     width: 720px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-text-1 {
-    margin-left: 197px;
-    width: 540px;
-  }
-
   .u-section-1 .u-form-1 {
     margin-top: 149px;
     width: 540px;
@@ -83,16 +73,139 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 697px;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-left: 124px;
-    width: 340px;
     font-size: 1.5rem;
   }
 
   .u-section-1 .u-form-1 {
-    margin-top: 206px;
+    height: 199px;
+    margin-top: 107px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+}.u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 427px;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  font-weight: normal;
+  margin: 32px auto 0;
+}
+
+.u-section-2 .u-list-1 {
+  width: 727px;
+  margin: 44px auto 60px;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-gap: 10px 10px;
+  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  min-height: 128px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 10px;
+}
+
+.u-section-2 .u-text-2 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+.u-section-2 .u-btn-1 {
+  border-style: none none solid;
+  padding: 0;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 10px;
+}
+
+.u-section-2 .u-text-3 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+.u-section-2 .u-btn-2 {
+  border-style: none none solid;
+  padding: 0;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 10px;
+}
+
+.u-section-2 .u-text-4 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+.u-section-2 .u-btn-3 {
+  border-style: none none solid;
+  padding: 0;
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 10px;
+}
+
+.u-section-2 .u-text-5 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+.u-section-2 .u-btn-4 {
+  border-style: none none solid;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 28px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: 23px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 32px;
+  }
+
+  .u-section-2 .u-list-1 {
+    width: 720px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-list-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-list-1 {
     width: 340px;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 222px;
 }
