--- a/Page-2.css
+++ b/Page-2.css
@@ -3,394 +3,430 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 947px;
+  min-height: 368px;
 }
 
 .u-section-1 .u-text-1 {
-  font-weight: 700;
-  width: 625px;
   animation-duration: 1000ms;
-  margin: 57px auto 0;
-}
-
-.u-section-1 .u-list-1 {
-  width: 460px;
-  margin: 49px auto 0 106px;
-}
-
-.u-section-1 .u-repeater-1 {
-  min-height: 118px;
-  grid-template-columns: 100%;
-  grid-gap: 0px 0px;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding: 10px 10px 1px;
+  font-size: 3.75rem;
+  font-weight: normal;
+  margin: 91px auto 0 86px;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 10px 10px 1px;
+  animation-duration: 1000ms;
+  font-size: 3.75rem;
+  margin: 27px 152px 0 auto;
 }
 
 .u-section-1 .u-text-3 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-container-layout-3 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-4 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-image-1 {
-  width: 79px;
-  height: 45px;
-  margin: -90px auto 0 11px;
-}
-
-.u-section-1 .u-list-2 {
-  width: 460px;
-  margin: -72px 11px 0 auto;
-}
-
-.u-section-1 .u-repeater-2 {
-  min-height: 118px;
-  grid-template-columns: 100%;
-  grid-gap: 0px 0px;
-}
-
-.u-section-1 .u-container-layout-4 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-5 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-container-layout-5 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-6 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-container-layout-6 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-7 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-image-2 {
-  width: 79px;
-  height: 45px;
-  margin: -89px 487px 0 auto;
-}
-
-.u-section-1 .u-image-3 {
-  width: 79px;
-  height: 45px;
-  margin: 119px auto 0 11px;
-}
-
-.u-section-1 .u-image-4 {
-  width: 79px;
-  height: 45px;
-  margin: -45px 487px 0 auto;
-}
-
-.u-section-1 .u-list-3 {
-  width: 460px;
-  margin: -74px auto 0 106px;
-}
-
-.u-section-1 .u-repeater-3 {
-  min-height: 118px;
-  grid-template-columns: 100%;
-  grid-gap: 0px 0px;
-}
-
-.u-section-1 .u-container-layout-7 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-8 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-container-layout-8 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-9 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-container-layout-9 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-10 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-list-4 {
-  width: 460px;
-  margin: -119px 11px 0 auto;
-}
-
-.u-section-1 .u-repeater-4 {
-  min-height: 118px;
-  grid-template-columns: 100%;
-  grid-gap: 0px 0px;
-}
-
-.u-section-1 .u-container-layout-10 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-11 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-btn-4 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-container-layout-11 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-12 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-container-layout-12 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-13 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-list-5 {
-  width: 460px;
-  margin: 49px auto 0 106px;
-}
-
-.u-section-1 .u-repeater-5 {
-  min-height: 118px;
-  grid-template-columns: 100%;
-  grid-gap: 0px 0px;
-}
-
-.u-section-1 .u-container-layout-13 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-14 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-btn-5 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-container-layout-14 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-15 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-container-layout-15 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-16 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-list-6 {
-  width: 460px;
-  margin: -115px 11px 0 auto;
-}
-
-.u-section-1 .u-repeater-6 {
-  min-height: 118px;
-  grid-template-columns: 100%;
-  grid-gap: 0px 0px;
-}
-
-.u-section-1 .u-container-layout-16 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-17 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-btn-6 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-container-layout-17 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-18 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-container-layout-18 {
-  padding: 10px 10px 1px;
-}
-
-.u-section-1 .u-text-19 {
-  font-size: 1.125rem;
-  margin: 0;
-}
-
-.u-section-1 .u-image-5 {
-  width: 79px;
-  height: 45px;
-  margin: -90px auto 0 11px;
-}
-
-.u-section-1 .u-image-6 {
-  width: 79px;
-  height: 45px;
-  margin: -45px 487px 60px auto;
+  margin: 17px auto 60px 86px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 721px;
-  }
-
-  .u-section-1 .u-list-3 {
-    margin-top: -73px;
-  }
-}
-
-@media (max-width: 767px) {
   .u-section-1 .u-text-1 {
-    width: 540px;
-  }
-
-  .u-section-1 .u-list-1 {
-    margin-left: 80px;
-  }
-
-  .u-section-1 .u-image-2 {
-    margin-right: 461px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-right: 461px;
-  }
-
-  .u-section-1 .u-list-3 {
-    margin-left: 80px;
-  }
-
-  .u-section-1 .u-list-5 {
-    margin-left: 80px;
-  }
-
-  .u-section-1 .u-image-6 {
-    margin-right: 461px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
-    width: 340px;
+    font-size: 1.875rem;
   }
 
-  .u-section-1 .u-list-1 {
-    width: 340px;
-    margin-left: 0;
+  .u-section-1 .u-text-2 {
+    margin-right: 96px;
+    font-size: 1.875rem;
   }
+}.u-section-2 .u-sheet-1 {
+  min-height: 161px;
+}
 
-  .u-section-1 .u-list-2 {
+.u-section-2 .u-form-1 {
+  height: 67px;
+  margin: 47px 703px 47px 0;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  border-style: solid;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-form-1 {
+    width: 470px;
+    margin-right: 503px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-form-1 {
+    margin-right: 283px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-form-1 {
+    margin-right: 103px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-form-1 {
     width: 340px;
     margin-right: 0;
   }
+}.u-section-3 .u-sheet-1 {
+  min-height: 1146px;
+}
 
-  .u-section-1 .u-image-2 {
-    margin-right: 261px;
+.u-section-3 .u-list-1 {
+  width: 680px;
+  margin: 33px 21px 0 auto;
+}
+
+.u-section-3 .u-repeater-1 {
+  grid-gap: 10px 10px;
+  grid-template-columns: 100%;
+  min-height: 774px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 8px 10px 0;
+}
+
+.u-section-3 .u-image-1 {
+  height: 51px;
+  width: 89px;
+  margin: 10px auto 0 0;
+}
+
+.u-section-3 .u-text-1 {
+  margin: -61px auto 0 104px;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  font-size: 1.5rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-2 {
+  margin: 5px auto 0 104px;
+}
+
+.u-section-3 .u-text-3 {
+  margin: 5px auto 0 104px;
+}
+
+.u-section-3 .u-text-4 {
+  margin: 21px 192px 0 104px;
+}
+
+.u-section-3 .u-btn-2 {
+  font-size: 0.875rem;
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: normal;
+  margin: -68px 21px 0 auto;
+  padding: 17px 30px 18px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 8px 10px 0;
+}
+
+.u-section-3 .u-image-2 {
+  height: 51px;
+  width: 89px;
+  margin: 10px auto 0 0;
+}
+
+.u-section-3 .u-text-5 {
+  margin: -61px auto 0 104px;
+}
+
+.u-section-3 .u-btn-3 {
+  background-image: none;
+  font-size: 1.5rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-6 {
+  margin: 5px auto 0 104px;
+}
+
+.u-section-3 .u-text-7 {
+  margin: 5px auto 0 104px;
+}
+
+.u-section-3 .u-text-8 {
+  margin: 21px 192px 0 104px;
+}
+
+.u-section-3 .u-btn-4 {
+  font-size: 0.875rem;
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: normal;
+  margin: -68px 21px 0 auto;
+  padding: 17px 30px 18px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 8px 10px 0;
+}
+
+.u-section-3 .u-image-3 {
+  height: 51px;
+  width: 89px;
+  margin: 10px auto 0 0;
+}
+
+.u-section-3 .u-text-9 {
+  margin: -61px auto 0 104px;
+}
+
+.u-section-3 .u-btn-5 {
+  background-image: none;
+  font-size: 1.5rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-10 {
+  margin: 5px auto 0 104px;
+}
+
+.u-section-3 .u-text-11 {
+  margin: 5px auto 0 104px;
+}
+
+.u-section-3 .u-text-12 {
+  margin: 21px 192px 0 104px;
+}
+
+.u-section-3 .u-btn-6 {
+  font-size: 0.875rem;
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: normal;
+  margin: -68px 21px 0 auto;
+  padding: 17px 30px 18px;
+}
+
+.u-section-3 .u-group-1 {
+  width: 397px;
+  min-height: 736px;
+  margin: -773px auto auto 10px;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 15px 22px;
+}
+
+.u-section-3 .u-text-13 {
+  font-size: 1.5rem;
+  margin: 0 auto 0 8px;
+}
+
+.u-section-3 .u-text-14 {
+  font-size: 1.5rem;
+  margin: 20px auto 0 8px;
+}
+
+.u-section-3 .u-btn-7 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-15 {
+  font-size: 1.5rem;
+  margin: 11px auto 0 8px;
+}
+
+.u-section-3 .u-btn-8 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-16 {
+  font-size: 1.5rem;
+  margin: 11px auto 0 8px;
+}
+
+.u-section-3 .u-btn-9 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-17 {
+  font-size: 1.5rem;
+  margin: 11px auto 0 8px;
+}
+
+.u-section-3 .u-btn-10 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-18 {
+  font-size: 1.5rem;
+  margin: 24px auto 0 8px;
+}
+
+.u-section-3 .u-text-19 {
+  font-size: 1.5rem;
+  margin: 20px auto 0 8px;
+}
+
+.u-section-3 .u-btn-11 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-20 {
+  font-size: 1.5rem;
+  margin: 11px auto 0 8px;
+}
+
+.u-section-3 .u-btn-12 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-21 {
+  font-size: 1.5rem;
+  margin: 11px auto 0 8px;
+}
+
+.u-section-3 .u-btn-13 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.u-section-3 .u-text-22 {
+  font-size: 1.5rem;
+  margin: 11px auto 0 8px;
+}
+
+.u-section-3 .u-btn-14 {
+  background-image: none;
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1563px;
   }
 
-  .u-section-1 .u-image-4 {
-    margin-right: 261px;
-  }
-
-  .u-section-1 .u-list-3 {
-    width: 340px;
+  .u-section-3 .u-group-1 {
+    margin-top: 56px;
+    margin-bottom: 0;
     margin-left: 0;
   }
+}
 
-  .u-section-1 .u-list-4 {
-    width: 340px;
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1722px;
+  }
+
+  .u-section-3 .u-group-1 {
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1876px;
+  }
+
+  .u-section-3 .u-list-1 {
+    width: 540px;
     margin-right: 0;
   }
 
-  .u-section-1 .u-list-5 {
-    width: 340px;
-    margin-left: 0;
+  .u-section-3 .u-text-4 {
+    margin-right: 52px;
   }
 
-  .u-section-1 .u-list-6 {
+  .u-section-3 .u-btn-2 {
+    margin-top: 20px;
+    margin-right: 52px;
+    margin-left: 104px;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-right: 52px;
+  }
+
+  .u-section-3 .u-btn-4 {
+    margin-top: 20px;
+    margin-right: 52px;
+    margin-left: 104px;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-right: 52px;
+  }
+
+  .u-section-3 .u-btn-6 {
+    margin-top: 20px;
+    margin-right: 52px;
+    margin-left: 104px;
+  }
+
+  .u-section-3 .u-group-1 {
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-list-1 {
     width: 340px;
+  }
+
+  .u-section-3 .u-text-4 {
     margin-right: 0;
   }
 
-  .u-section-1 .u-image-6 {
-    margin-right: 261px;
+  .u-section-3 .u-btn-2 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-8 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-btn-4 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-btn-6 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-group-1 {
+    width: 340px;
   }
 }
