--- a/nicepage.css
+++ b/nicepage.css
@@ -34411,6 +34411,16 @@ a.u-link.u-text-hover-grey-90:hover {
             background-color: #e2921f;
         }
 
+        .u-custom-color-1,
+        .u-body.u-custom-color-1,
+        .u-container-style.u-custom-color-1:before,
+        .u-container-layout.u-custom-color-1:before,
+        .u-table-alt-custom-color-1 tr:nth-child(even)
+        {
+            color: #ffffff;
+            background-color: #ffffff;
+        }
+
         .u-button-style.u-custom-color-2,
         .u-button-style.u-custom-color-2[class*="u-border-"]
         {
