--- a/nicepage.css
+++ b/nicepage.css
@@ -34418,7 +34418,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #ffffff;
+            background-color:  #003399;
         }
 
         .u-button-style.u-custom-color-2,
