--- a/nicepage.css
+++ b/nicepage.css
@@ -34408,7 +34408,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-2 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #d6063e;
+            background-color: #71797E;
         }
 
         .u-custom-color-1,
