--- a/SignIn.css
+++ b/SignIn.css
@@ -7,6 +7,7 @@
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.2;
+    margin-bottom: 30px;
 }
 
 .my-login-page .brand {
@@ -46,9 +47,9 @@
 	padding: 10px;
 }
 
-.my-login-page .card .card-title {
+/*.my-login-page .card .card-title {
 	margin-bottom: 30px;
-}
+}*/
 
 .my-login-page .form-control {
 	border-width: 2.3px;
