--- a/SignIn.css
+++ b/SignIn.css
@@ -21,11 +21,12 @@
 	z-index: 1;
 }
 
-.my-login-page .row {
+.my-login-page .u-align-center {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -12.5px;
-    margin-left: -12.5px;
+    /*margin-top: 0px;*/
+    margin-right: 162.5px;
+    margin-left: 162.5px;
 }
 
 .my-login-page .brand img {
