--- a/assets/css/nice-select.css
+++ b/assets/css/nice-select.css
@@ -97,6 +97,12 @@
       line-height: 34px;
       min-height: 34px; }
   .nice-select .list {
+
+    width: auto;
+    height: 310px;
+    overflow-x: hidden;
+    overflow-y: auto;
+
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
