--- a/SignIn.css
+++ b/SignIn.css
@@ -1,3 +1,7 @@
+.form-group .nice-select{
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+}
 .my-login-page {
 	background-color: #ffffff;
 	font-size: 14px;
