--- a/css/autocomplete.css
+++ b/css/autocomplete.css
@@ -18,6 +18,11 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  background-color: #ffffff;
+  width: auto;
+  height: 275px;
+  overflow-x: hidden;
+  overflow-y: auto
 }
 .acWrap .acSuggest ul li {
   padding: 10px;
